--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Homework-01</title>
 </head>
 <body>
-    <!-- Hat -->
+    <!-- Шапка -->
     <header>
         <a href=" ">WebStudio</a>
         <nav>
@@ -22,56 +22,87 @@
                 <li> <a href="tel: +380961111111">+38 096 111 11 11</a> </li>
             </ul>
     </header>
-    <!-- Content -->
+    <!-- Контент -->
     <main>
-        <!-- Effective solutions -->
+        <!-- Эффективные решения -->
         <section>
             <h1>Эффективные решения для вашего бизнеса</h1>
             <button type="button">Заказать услугу</button>
         </section>
-        <!-- 4 points about us -->
+        <!-- 4 пункта про нас -->
         <section>
-            <h2>Наши особенности</h2>
+           <!-- <h2>Наши особенности</h2> -->
             <ul>
                 <li>
-                    <h3>Внимание к деталям</h3>
+                    <h3>ВНИМАНИЕ К ДЕТАЛЯМ</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h3>Пунктуальность</h3>
+                    <h3>ПУНКТУАЛЬНОСТЬ</h3>
                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h3>Планирование</h3>
+                    <h3>ПЛАНИРОВАНИЕ</h3>
                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h3>Современные технологии</h3>
+                    <h3>СОВРЕМЕННЫЙ ТЕХНОЛОГИИ</h3>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
-        <!-- What are we doing -->
+        <!-- Чем мы занимаесмя -->
         <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
                 <li>
-                    <img src="./images/doing1.jpg" alt="photo with PC" width="370" />
+                    <img src="./images/doing1.jpg" alt="фото решений для ПК" width="370" />
                 </li>
                 <li>
-                    <img src="./images/doing2.jpg" alt="photo with mobile phone" width="370" />
+                    <img src="./images/doing2.jpg" alt="фото решений для мобильных телефонов" width="370" />
                 </li>
                 <li>
-                    <img src="./images/doing3.jpg" alt="photo with tablet" width="370" />
+                    <img src="./images/doing3.jpg" alt="фото решений для планшетов" width="370" />
                 </li>
             </ul>
         </section>
-
+        <!-- Наша команда-->
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <img src="./images/igor.jpg" alt="фото Игорь Демьяненко" width="270" /> 
+                    <h3>Игорь Демьяненко</h3>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="./images/olga.jpg" alt="фото Ольга Репина" width="270" /> 
+                    <h3>Ольга Репина</h3>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./images/nicholas.jpg" alt="фото Николай Тарасов" width="270" /> 
+                    <h3>Николай Тарасов</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/michail.jpg" alt="фото Михаил Ермаков" width="270" /> 
+                    <h3>Михаил Ермаков</h3>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
     </main>
     <!-- Down -->
     <footer>
-
-    </footer>
-    
+        <a href=" ">WebStudio</a>
+        <address>
+            <ul>
+                <li> <p>г. Киев, пр-т Леси Украинки, 26</p> </li>
+                <li> <a href="malto: info@example.com">info@example.com</a> </li>
+                <li> <a href="tel: +380991111111">+38 099 111 11 11</a> </li>
+            </ul>
+        </address>
+    </footer>   
 </body>
 </html>
